# edgar-pipes

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  DEPENDENCIES.md  HOWTO.md  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: dev_notes.md  journal-usage.md  release-plan-v0.1.0.md
docs/agents/: AI_AGENT_GUIDE.md
docs/data_relation_maps/: data_relationships_map.md
docs/developers/: architecture.md
docs/developers/decisions/: 001-fully-qualified-names.md  002-result-types.md  003-pattern-based-extraction.md  004-pipeline-protocol.md  005-workspace-model.md  006-ft-toml-workspace-config.md  (+4 more)
docs/examples/: README.md  journal-aeo.jsonl  researching-a-company.md
docs/exception_handling/: exception_handling.md
docs/facts_import/: facts_import_checklist.md  facts_import_plan.md
docs/journaling_system/: journaling_system.md
docs/other/: coding_conventions.md  dev_philosophy.md  mcp_integration_vision.md  project_foundation_doc.md  user_manual_guidelines.md
docs/pipeline_architecture/: pipeline_architecture.md
docs/roadmap/: edgar_roadmap.md
docs/roles_concepts_and_groups/: roles_concepts_and_groups.md
docs/todo/: todo_list.md  user_id_implementation_plan.md
docs/workflow_description/: researching-a-company.md  workflow_description.md
docs/xbrl/: xbrl-roles-structure.md
edgar/: __init__.py  cache.py  config.py  main.py  net.py  pipeline.py  result.py
edgar/cli/: __init__.py  add.py  agg.py  build.py  calc.py  config.py  delete.py  export.py  format.py  group.py  init.py  journal.py  modify.py  new.py  probe.py  report.py  select.py  setup.py  shared.py  stats.py  summary.py  themes.py  update.py
edgar/db/: __init__.py  queries.py  report.py  store.py
edgar/xbrl/: __init__.py  arelle.py  facts.py  net.py  sec_api.py
examples/: README.md  journal-aeo.txt
(+18 files in other folders)
