[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-pipes"
version = "0.2.1"
description = "Progressive XBRL financial data extraction from SEC EDGAR filings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "arelle-release @ git+https://github.com/Arelle/Arelle.git@master",
]
authors = [
    {name = "emifrn", email = "emifrn@users.noreply.github.com"}
]
keywords = [
    "xbrl",
    "edgar",
    "sec",
    "financial-data",
    "financial-analysis",
    "10-q",
    "10-k",
    "accounting",
    "financial-statements",
    "progressive-disclosure"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/emifrn/edgar-pipes"
Documentation = "https://github.com/emifrn/edgar-pipes/tree/main/docs"
Repository = "https://github.com/emifrn/edgar-pipes"
Issues = "https://github.com/emifrn/edgar-pipes/issues"

[project.scripts]
ep = "edgar.main:main"

[tool.setuptools]
packages = ["edgar", "edgar.cli", "edgar.db", "edgar.xbrl"]

[tool.setuptools.package-data]
edgar = ["py.typed"]
